--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@
     <link href="https://ai-public.creatie.ai/gen_page/tailwind-custom.css" rel="stylesheet" />
     <script
         src="https://cdn.tailwindcss.com/3.4.5?plugins=forms@0.5.7,typography@0.5.13,aspect-ratio@0.4.2,container-queries@0.1.1"></script>
-    <script src="https://ai-public.creatie.ai/gen_page/tailwind-config.min.js" data-color="#FFD700"
+    <script src="https://ai-public.creatie.ai/gen_page/tailwind-config.min.js" data-color="#F99A40"
         data-border-radius="small"></script>
 </head>
 
@@ -29,19 +29,19 @@
                 </div>
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="text-white hover:text-[#FFD700] font-medium">Home</a>
-                    <a href="about-us.html" class="text-white hover:text-[#FFD700] font-medium">About Us</a>
-                    <a href="projects.html" class="text-white hover:text-[#FFD700] font-medium">Projects</a>
-                    <a href="services.html" class="text-white hover:text-[#FFD700] font-medium">Services</a>
-                    <a href="contact.html" class="text-white hover:text-[#FFD700] font-medium">Contact</a>
+                    <a href="index.html" class="text-white hover:text-[#F99A40] font-medium">Home</a>
+                    <a href="about-us.html" class="text-white hover:text-[#F99A40] font-medium">About Us</a>
+                    <a href="projects.html" class="text-white hover:text-[#F99A40] font-medium">Projects</a>
+                    <a href="services.html" class="text-white hover:text-[#F99A40] font-medium">Services</a>
+                    <a href="contact.html" class="text-white hover:text-[#F99A40] font-medium">Contact</a>
                     <button
-                        class="bg-[#FFD700] text-black px-6 py-2 rounded-md hover:bg-[#FFD700]/90 font-medium">Contact
+                        class="bg-[#F99A40] text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">Contact
                         Us</button>
                 </div>
                 <!-- Mobile Menu Button -->
                 <div class="md:hidden flex items-center space-x-4">
                     <button
-                        class="bg-[#FFD700] text-black px-4 py-2 rounded-md hover:bg-[#FFD700]/90 font-medium">Contact
+                        class="bg-[#F99A40] text-black px-4 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">Contact
                         Us</button>
                     <button id="mobile-menu-button" class="p-2">
                         <i class="fas fa-bars text-white text-2xl"></i>
@@ -59,11 +59,11 @@
                 </button>
             </div>
             <div class="px-8 pt-2 pb-4 space-y-3">
-                <a href="index.html" class="block text-white hover:text-[#FFD700] font-medium">Home</a>
-                <a href="about-us.html" class="block text-white hover:text-[#FFD700] font-medium">About Us</a>
-                <a href="projects.html" class="block text-white hover:text-[#FFD700] font-medium">Projects</a>
-                <a href="services.html" class="block text-white hover:text-[#FFD700] font-medium">Services</a>
-                <a href="contact.html" class="block text-white hover:text-[#FFD700] font-medium">Contact</a>
+                <a href="index.html" class="block text-white hover:text-[#F99A40] font-medium">Home</a>
+                <a href="about-us.html" class="block text-white hover:text-[#F99A40] font-medium">About Us</a>
+                <a href="projects.html" class="block text-white hover:text-[#F99A40] font-medium">Projects</a>
+                <a href="services.html" class="block text-white hover:text-[#F99A40] font-medium">Services</a>
+                <a href="contact.html" class="block text-white hover:text-[#F99A40] font-medium">Contact</a>
             </div>
         </div>
     </nav>
@@ -184,19 +184,19 @@
         <div class="max-w-7xl mx-auto px-8">
             <div class="grid md:grid-cols-4 gap-8 text-center">
                 <div>
-                    <div class="text-4xl font-bold text-[#FFD700] mb-2">25+</div>
+                    <div class="text-4xl font-bold text-[#F99A40] mb-2">25+</div>
                     <div class="text-gray-400">Years in Business</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-[#FFD700] mb-2">500+</div>
+                    <div class="text-4xl font-bold text-[#F99A40] mb-2">500+</div>
                     <div class="text-gray-400">Projects Completed</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-[#FFD700] mb-2">150+</div>
+                    <div class="text-4xl font-bold text-[#F99A40] mb-2">150+</div>
                     <div class="text-gray-400">Team Members</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-[#FFD700] mb-2">98%</div>
+                    <div class="text-4xl font-bold text-[#F99A40] mb-2">98%</div>
                     <div class="text-gray-400">Client Satisfaction</div>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                             class="flex-1 px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-custom w-full"
                             required />
                         <button type="submit"
-                            class="bg-[#FFD700] text-gray-900 px-4 py-1 rounded-r-md hover:bg-[#FFD700]/90 font-medium text-sm">
+                            class="bg-[#F99A40] text-gray-900 px-4 py-1 rounded-r-md hover:bg-[#F99A40]/90 font-medium text-sm">
                             Send
                         </button>
                     </form>
