--- a/index.html
+++ b/index.html
@@ -11,41 +11,98 @@
     <link href="https://ai-public.creatie.ai/gen_page/tailwind-custom.css" rel="stylesheet" />
     <script
         src="https://cdn.tailwindcss.com/3.4.5?plugins=forms@0.5.7,typography@0.5.13,aspect-ratio@0.4.2,container-queries@0.1.1"></script>
-    <script src="https://ai-public.creatie.ai/gen_page/tailwind-config.min.js" data-color="#FFD700"
+    <script src="https://ai-public.creatie.ai/gen_page/tailwind-config.min.js" data-color="#F99A40"
         data-border-radius="small"></script>
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        .swiper-container {
+            overflow: hidden; /* Prevents scrollbar flash */
+        }
+        .swiper-slide {
+            position: relative;
+            background-color: black; /* Prevents white flash during fade */
+        }
+        .swiper-button-next,
+        .swiper-button-prev {
+            /* background-color: rgba(0, 0, 0, 0.6); */
+            padding: 12px;
+            border-radius: 50%;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        .swiper-pagination-bullet {
+            background-color: rgba(255, 255, 255, 0.7);
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        .swiper-pagination-bullet-active {
+            background-color: #F99A40;
+            transform: scale(1.2);
+        }
+        #loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000; /* Set a background color */
+    z-index: 9999; /* Ensure it's above all other elements */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loader video {
+    max-width: 100%; /* Ensure the video fits properly */
+    max-height: 100%; /* Adjust height */
+    object-fit: contain; /* Maintain aspect ratio */
+}
+        #loader.hidden {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        #loader img {
+            width: 150px;
+            height: auto;
+        }
+    </style>
+
 </head>
 
 <body class="font-[Poppins] bg-gray-50">
 
-    <nav class="bg-black fixed w-full z-50 shadow-sm">
+    <nav id="navbar" class="bg-transparent fixed w-full z-50 shadow-sm transition-colors duration-300 borderborder-b border-white">
         <div class="max-w-7xl mx-auto px-8">
-            <div class="flex justify-between items-center h-20">
+            <div class="flex justify-between items-center h-auto py-2">
                 <!-- Logo -->
                 <div class="flex items-center">
                     <a href="index.html">
-                        <img src="https://ai-public.creatie.ai/gen_page/logo_placeholder.png" alt="BuildTech Logo"
-                            class="h-12" />
+                        <img src="log1.svg" alt="BuildTech Logo"
+                            class="h-16 md:h-24" />
                     </a>
                 </div>
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="text-white hover:text-[#FFD700] font-medium">Home</a>
-                    <a href="about-us.html" class="text-white hover:text-[#FFD700] font-medium">About Us</a>
-                    <a href="projects.html" class="text-white hover:text-[#FFD700] font-medium">Projects</a>
-                    <a href="services.html" class="text-white hover:text-[#FFD700] font-medium">Services</a>
-                    <a href="contact.html" class="text-white hover:text-[#FFD700] font-medium">Contact</a>
+                    <a href="index.html" class="text-[#F99A40] border-b border-[#F99A40] hover:text-[#F99A40] font-medium">Home</a>
+                    <a href="about-us.html" class="text-white hover:text-[#F99A40]">About Us</a>
+                    <a href="projects.html" class="text-white hover:text-[#F99A40]">Projects</a>
+                    <a href="services.html" class="text-white hover:text-[#F99A40]">Services</a>
+                    <!-- <a href="contact.html" class="text-white hover:text-[#F99A40]">Contact</a> -->
                     <a href="contact.html">
-                        <button class="bg-[#FFD700] text-black px-6 py-2 rounded-md hover:bg-[#FFD700]/90 font-medium">
+                        <button class="border border-[#F99A40] text-white border-2 text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">
                             Contact Us
                         </button>
                     </a>
-
                 </div>
                 <!-- Mobile Menu Button -->
                 <div class="md:hidden flex items-center space-x-4">
-                    <button
-                        class="bg-[#FFD700] text-black px-4 py-2 rounded-md hover:bg-[#FFD700]/90 font-medium">Contact
-                        Us</button>
+                    <!-- <button
+                        class="bg-[#F99A40] text-black px-4 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">Contact
+                        Us</button> -->
                     <button id="mobile-menu-button" class="p-2">
                         <i class="fas fa-bars text-white text-2xl"></i>
                     </button>
@@ -62,34 +119,137 @@
                 </button>
             </div>
             <div class="px-8 pt-2 pb-4 space-y-3">
-                <a href="index.html" class="block text-white hover:text-[#FFD700] font-medium">Home</a>
-                <a href="about-us.html" class="block text-white hover:text-[#FFD700] font-medium">About Us</a>
-                <a href="projects.html" class="block text-white hover:text-[#FFD700] font-medium">Projects</a>
-                <a href="services.html" class="block text-white hover:text-[#FFD700] font-medium">Services</a>
-                <a href="contact.html" class="block text-white hover:text-[#FFD700] font-medium">Contact</a>
+                <a href="index.html" class="block text-white hover:text-[#F99A40] font-medium">Home</a>
+                <a href="about-us.html" class="block text-white hover:text-[#F99A40] font-medium">About Us</a>
+                <a href="projects.html" class="block text-white hover:text-[#F99A40] font-medium">Projects</a>
+                <a href="services.html" class="block text-white hover:text-[#F99A40] font-medium">Services</a>
+                <a href="contact.html" class="block text-white hover:text-[#F99A40] font-medium">Contact</a>
             </div>
         </div>
     </nav>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const navbar = document.getElementById("navbar");
 
-    <header class="pt-20">
-        <div class="relative h-[600px]">
-            <img src="assets/header.webp" alt="Construction Site" class="w-full h-full object-cover" />
-            <div class="absolute inset-0 bg-black/50">
-                <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
-                    <div class="max-w-2xl text-white">
-                        <h1 class="text-5xl font-bold mb-6">Building Tomorrow&#39;s Landmarks Today</h1>
-                        <p class="text-xl mb-8">With over 25 years of experience, we deliver exceptional construction
-                            solutions that transform visions into reality.</p>
+            window.addEventListener("scroll", function () {
+                if (window.scrollY > 70) {
+                    navbar.classList.add("bg-black");
+                    navbar.classList.remove("bg-transparent");
+                } else {
+                    navbar.classList.add("bg-transparent");
+                    navbar.classList.remove("bg-black");
+                }
+            });
+        });
+    </script>
+<div id="loader">
+    <video src="./assets/anim/loading.webm" autoplay loop muted></video>
+</div>
+
+<header class="h-full">
+    <div class="swiper-container relative h-full">
+        <!-- Swiper Wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slide 1 -->
+            <div class="swiper-slide h-full">
+                <img src="assets/p-18.webp" alt="Construction Site"
+                    class="w-full h-full object-cover" />
+                <div class="absolute inset-0 bg-black/50">
+                    <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
+                        <div class="max-w-2xl text-white">
+                            <h1 class="text-5xl font-bold mb-6">Building Tomorrow&#39;s Landmarks Today</h1>
+                            <p class="text-xl mb-8">With over 25 years of experience, we deliver exceptional construction
+                                solutions that transform visions into reality.</p>
                             <a href="projects.html">
-                                <button class="bg-[#FFD700] text-gray-900 px-8 py-3 !rounded-button hover:bg-[#FFD700]/90 font-medium">View
-                                Our Projects</button>
+                                <button
+                                    class="bg-[#F99A40] text-gray-900 px-8 py-3 rounded-lg hover:bg-[#F99A40]/90 font-medium transition-transform transform hover:scale-105">
+                                    Projects
+                                </button>
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Slide 2 -->
+
+            <div class="swiper-slide h-full">
+                <img src="assets/p-13.webp" alt="Another Site"
+                    class="w-full h-full object-cover" />
+                <div class="absolute inset-0 bg-black/70">
+                    <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
+                        <div class="max-w-2xl text-white">
+                            <h1 class="text-5xl font-bold mb-6">Crafting Your Dreams with Precision</h1>
+                            <p class="text-xl mb-8">From planning to execution, we bring innovation and quality to every
+                                project.</p>
+                            <a href="services.html">
+                                <button
+                                    class="bg-[#F99A40] text-gray-900 px-8 py-3 rounded-lg hover:bg-[#F99A40]/90 font-medium transition-transform transform hover:scale-105">
+                                    Projects
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="swiper-slide h-full">
+                <img src="assets/p-20.webp           " alt="Another Site"
+                    class="w-full h-full object-cover" />
+                <div class="absolute inset-0 bg-black/50">
+                    <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
+                        <div class="max-w-2xl text-white">
+                            <h1 class="text-5xl font-bold mb-6">Crafting Your Dreams with Precision</h1>
+                            <p class="text-xl mb-8">From planning to execution, we bring innovation and quality to every
+                                project.</p>
+                            <a href="services.html">
+                                <button
+                                    class="bg-[#F99A40] text-gray-900 px-8 py-3 rounded-lg hover:bg-[#F99A40]/90 font-medium transition-transform transform hover:scale-105">
+                                    Projects
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+
+        <!-- Swiper Navigation -->
+        <div class="swiper-button-next text-white"></div>
+        <div class="swiper-button-prev text-white"></div>
+
+        <!-- Swiper Pagination -->
+        <div class="swiper-pagination"></div>
+    </div>
+</header>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const swiper = new Swiper('.swiper-container', {
+            loop: true,
+            autoplay: {
+                delay: 4000,
+                disableOnInteraction: false,
+            },
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
+            effect: 'fade', // Use fade effect for smooth transitions
+            fadeEffect: {
+                crossFade: true, // Ensures smooth fading between slides
+            },
+            speed: 1200, // Smooth fade duration
+        });
+    });
+</script>
+
 
     <section class="py-20">
         <div class="max-w-7xl mx-auto px-8">
@@ -119,7 +279,8 @@
                     </div>
 
                     <a href="about-us.html">
-                        <button class="bg-[#FFD700] text-gray-900 px-6 py-3 !rounded-button hover:bg-[#FFD700]/90 font-medium">Meet
+                        <button
+                            class="bg-[#F99A40] text-gray-900 px-6 py-3 !rounded-button hover:bg-[#F99A40]/90 font-medium">Meet
                             Our Team</button>
                     </a>
 
@@ -140,28 +301,28 @@
             </div>
             <div class="grid md:grid-cols-4 gap-8">
                 <div class="bg-white p-8 rounded-lg shadow-sm">
-                    <i class="fas fa-building text-4xl text-[#FFD700] mb-6"></i>
+                    <i class="fas fa-building text-4xl text-[#F99A40] mb-6"></i>
                     <h3 class="text-xl font-semibold mb-4">Commercial Construction</h3>
                     <p class="text-gray-600 mb-6">From office buildings to retail spaces, we create commercial
                         structures that drive business success.</p>
                     <a href="#" class="text-custom font-medium hover:text-custom/90">Learn More →</a>
                 </div>
                 <div class="bg-white p-8 rounded-lg shadow-sm">
-                    <i class="fas fa-home text-4xl text-[#FFD700] mb-6"></i>
+                    <i class="fas fa-home text-4xl text-[#F99A40] mb-6"></i>
                     <h3 class="text-xl font-semibold mb-4">Residential Projects</h3>
                     <p class="text-gray-600 mb-6">Custom homes and residential developments built with quality and
                         comfort in mind.</p>
                     <a href="#" class="text-custom font-medium hover:text-custom/90">Learn More →</a>
                 </div>
                 <div class="bg-white p-8 rounded-lg shadow-sm">
-                    <i class="fas fa-industry text-4xl text-[#FFD700] mb-6"></i>
+                    <i class="fas fa-industry text-4xl text-[#F99A40] mb-6"></i>
                     <h3 class="text-xl font-semibold mb-4">Industrial Development</h3>
                     <p class="text-gray-600 mb-6">Specialized industrial facilities designed for maximum efficiency and
                         functionality.</p>
                     <a href="#" class="text-custom font-medium hover:text-custom/90">Learn More →</a>
                 </div>
                 <div class="bg-white p-8 rounded-lg shadow-sm">
-                    <i class="fas fa-tools text-4xl text-[#FFD700] mb-6"></i>
+                    <i class="fas fa-tools text-4xl text-[#F99A40] mb-6"></i>
                     <h3 class="text-xl font-semibold mb-4">Renovation Services</h3>
                     <p class="text-gray-600 mb-6">Transforming existing spaces with modern upgrades and renovations.</p>
                     <a href="#" class="text-custom font-medium hover:text-custom/90">Learn More →</a>
@@ -215,31 +376,31 @@
             <div class="text-center mt-12">
                 <a href="projects.html">
                     <button
-                        class="bg-[#FFD700] text-gray-900 px-8 py-3 !rounded-button hover:bg-[#FFD700]/90 font-medium">View
+                        class="bg-[#F99A40] text-gray-900 px-8 py-3 !rounded-button hover:bg-[#F99A40]/90 font-medium">View
                         All Projects
                     </button>
                 </a>
             </div>
         </div>
     </section>
-   <!---years-->
+    <!---years-->
     <section class="bg-gray-900 text-white py-20">
         <div class="max-w-7xl mx-auto px-8">
             <div class="grid md:grid-cols-4 gap-8 text-center">
                 <div>
-                    <div class="text-4xl font-bold text-[#FFD700] mb-2">25+</div>
+                    <div class="text-4xl font-bold text-[#F99A40] mb-2">25+</div>
                     <div class="text-gray-400">Years in Business</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-[#FFD700] mb-2">500+</div>
+                    <div class="text-4xl font-bold text-[#F99A40] mb-2">500+</div>
                     <div class="text-gray-400">Projects Completed</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-[#FFD700] mb-2">150+</div>
+                    <div class="text-4xl font-bold text-[#F99A40] mb-2">150+</div>
                     <div class="text-gray-400">Team Members</div>
                 </div>
                 <div>
-                    <div class="text-4xl font-bold text-[#FFD700] mb-2">98%</div>
+                    <div class="text-4xl font-bold text-[#F99A40] mb-2">98%</div>
                     <div class="text-gray-400">Client Satisfaction</div>
                 </div>
             </div>
@@ -386,7 +547,7 @@
                                 placeholder="Your message"></textarea>
                         </div>
                         <button type="submit"
-                            class="bg-[#FFD700] text-gray-900 px-6 py-3 !rounded-button hover:bg-[#FFD700]/90 w-full font-medium">Send
+                            class="bg-[#F99A40] text-gray-900 px-6 py-3 !rounded-button hover:bg-[#F99A40]/90 w-full font-medium">Send
                             Message</button>
                     </form>
                 </div>
@@ -462,7 +623,7 @@
                             class="flex-1 px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-custom w-full"
                             required />
                         <button type="submit"
-                            class="bg-[#FFD700] text-gray-900 px-4 py-1 rounded-r-md hover:bg-[#FFD700]/90 font-medium text-sm">
+                            class="bg-[#F99A40] text-gray-900 px-4 py-1 rounded-r-md hover:bg-[#F99A40]/90 font-medium text-sm">
                             Send
                         </button>
                     </form>
@@ -474,12 +635,8 @@
             </div>
         </div>
     </footer>
-
-
-
-
 </body>
-
+ 
 </html>
 <script>
     document.getElementById('mobile-menu-button').addEventListener('click', function () {
@@ -490,5 +647,15 @@
     document.getElementById('mobile-menu-close').addEventListener('click', function () {
         const mobileMenu = document.getElementById('mobile-menu');
         mobileMenu.classList.add('translate-x-full');
+    });
+</script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const loader = document.getElementById('loader');
+        // Simulate a delay for demonstration (remove or adjust as needed)
+        setTimeout(() => {
+            loader.classList.add('hidden');
+        }, 1000); // Adjust the delay as necessary
     });
 </script>
