--- a/contact.html
+++ b/contact.html
@@ -81,6 +81,8 @@
             </div>
         </div>
     </header>
+    <div id="loader-container"></div>
+
     
     <section class="bg-white">
         <div class="max-w-7xl mx-auto px-8 py-20">
@@ -224,3 +226,5 @@
         mobileMenu.classList.add('translate-x-full');
     });
 </script>
+<script type="module" src="/assets/js/main.js"></script>
+
