--- a/projects.html
+++ b/projects.html
@@ -93,6 +93,7 @@
             </div>
         </div>
     </header>
+    <div id="loader-container"></div>
     <!--section1-->
     <div class="max-w-7xl mx-auto px-8 py-20">
         <section class="py-20 bg-white">
@@ -492,3 +493,4 @@
     });
 
 </script>
+<script type="module" src="/assets/js/main.js"></script>
