--- a/about-us.html
+++ b/about-us.html
@@ -81,6 +81,8 @@
             </div>
         </div>
     </header>
+    <div id="loader-container"></div>
+
     <!---->
 
     <section class="">
@@ -265,3 +267,5 @@
         mobileMenu.classList.add('translate-x-full');
     });
 </script>
+<script type="module" src="/assets/js/main.js"></script>
+
