--- a/index.html
+++ b/index.html
@@ -42,33 +42,7 @@
             background-color: #F99A40;
             transform: scale(1.2);
         }
-        #loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000000; /* Set a background color */
-    z-index: 9999; /* Ensure it's above all other elements */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#loader video {
-    max-width: 100%; /* Ensure the video fits properly */
-    max-height: 100%; /* Adjust height */
-    object-fit: contain; /* Maintain aspect ratio */
-}
-        #loader.hidden {
-            opacity: 0;
-            visibility: hidden;
-        }
-
-        #loader img {
-            width: 150px;
-            height: auto;
-        }
+    
     </style>
 
 </head>
@@ -143,10 +117,7 @@
             });
         });
     </script>
-<div id="loader">
-    <video src="./assets/anim/loading.webm" autoplay loop muted></video>
-</div>
-
+    <div id="loader-container"></div>
 <header class="h-full">
     <div class="swiper-container relative h-full">
         <!-- Swiper Wrapper -->
@@ -649,13 +620,6 @@
         mobileMenu.classList.add('translate-x-full');
     });
 </script>
+<script type="module" src="/assets/js/main.js"></script>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const loader = document.getElementById('loader');
-        // Simulate a delay for demonstration (remove or adjust as needed)
-        setTimeout(() => {
-            loader.classList.add('hidden');
-        }, 1000); // Adjust the delay as necessary
-    });
-</script>
+
