--- a/services.html
+++ b/services.html
@@ -81,6 +81,8 @@
             </div>
         </div>
     </header>
+    <div id="loader-container"></div>
+
     <section class="py-20">
         <div class="max-w-7xl mx-auto px-8 py-20">
             <div class="grid md:grid-cols-3 gap-8 mb-12">
@@ -402,3 +404,5 @@
         mobileMenu.classList.add('translate-x-full');
     });
 </script>
+<script type="module" src="/assets/js/main.js"></script>
+
