loader path changed

--- a/about-us.html
+++ b/about-us.html
@@ -267,5 +267,5 @@
         mobileMenu.classList.add('translate-x-full');
     });
 </script>
-<script type="module" src="/assets/js/main.js"></script>
+<script type="module" src="main.js"></script>
 
