--- a/index.html
+++ b/index.html
@@ -620,6 +620,6 @@
         mobileMenu.classList.add('translate-x-full');
     });
 </script>
-<script type="module" src="/assets/js/main.js"></script>
+<script type="module" src="main.js"></script>
 
 
