--- a/services.html
+++ b/services.html
@@ -404,5 +404,5 @@
         mobileMenu.classList.add('translate-x-full');
     });
 </script>
-<script type="module" src="/assets/js/main.js"></script>
+<script type="module" src="main.js"></script>
 
