--- a/index1.html
+++ b/index1.html
@@ -560,9 +560,10 @@
                     <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
+                        <a href="https://unistacx.slack.com/archives/D07D0QH5UM6/p1736940626489929" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-youtube"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
+                        <a href="https://unistacx.slack.com/archives/D07D0QH5UM6/p1736940609911559" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div>
