footer mini changes

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 <div class="absolute inset-0 bg-black/50">
                     <div class="max-w-7xl mx-auto px-8 h-full flex items-center">
                         <div class="max-w-2xl text-white">
-                            <h1 class="text-5xl font-bold mb-6">Building Tomorrow&#39;s Landmarks Today</h1>
-                            <p class="text-xl mb-8">With over 25 years of experience, we deliver exceptional construction
-                                solutions that transform visions into reality.</p>
+                            <h1 class="text-5xl font-bold mb-6">Redefining Excellence in Modern Construction</h1>
+                            <p class="text-xl mb-8">We transform ideas into architectural masterpieces, blending innovation, precision, and sustainability to create timeless designs.</p>
+
                             <a href="projects.html">
                                 <button
                                     class="bg-[#F99A40] text-gray-900 px-8 py-3 rounded-lg hover:bg-[#F99A40]/90 font-medium transition-transform transform hover:scale-105">
@@ -581,9 +581,10 @@
                     <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/evo_design_constructions?igsh=MWJxaWFjN2hiZnl6MA%3D%3D&utm_source=qr"><i class="fab fa-youtube"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/channel/UCwirZZJa0apc1ZB8ugioTng" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div>
