Navbar changed in all files

--- a/services.html
+++ b/services.html
@@ -16,59 +16,61 @@
 </head>
 
 <body class="font-[Poppins] bg-gray-50">
-    <nav class="bg-black fixed w-full z-50 shadow-sm">
-        <div class="max-w-7xl mx-auto px-8">
-            <div class="flex justify-between items-center h-20">
-                <!-- Logo -->
-                <div class="flex items-center">
-                    <a href="index.html">
-                        <img src="https://ai-public.creatie.ai/gen_page/logo_placeholder.png" alt="BuildTech Logo"
-                            class="h-12" />
-                    </a>
-                </div>
-                <!-- Desktop Menu -->
-                <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="text-white hover:text-[#F99A40] font-medium">Home</a>
-                    <a href="about-us.html" class="text-white hover:text-[#F99A40] font-medium">About Us</a>
-                    <a href="projects.html" class="text-white hover:text-[#F99A40] font-medium">Projects</a>
-                    <a href="services.html" class="text-white hover:text-[#F99A40] font-medium">Services</a>
-                    <a href="contact.html" class="text-white hover:text-[#F99A40] font-medium">Contact</a>
-                    <button
-                        class="bg-[#F99A40] text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">Contact
-                        Us</button>
-                </div>
-                <!-- Mobile Menu Button -->
-                <div class="md:hidden flex items-center space-x-4">
-                    <button
-                        class="bg-[#F99A40] text-black px-4 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">Contact
-                        Us</button>
-                    <button id="mobile-menu-button" class="p-2">
-                        <i class="fas fa-bars text-white text-2xl"></i>
-                    </button>
-                </div>
+<nav id="navbar" class="bg-black sticky top-0 w-full z-50 shadow-sm transition-colors duration-300 borderborder-b border-white">
+    <div class="max-w-7xl mx-auto px-8">
+        <div class="flex justify-between items-center h-auto py-2">
+            <!-- Logo -->
+            <div class="flex items-center">
+                <a href="index.html">
+                    <img src="log1.svg" alt="BuildTech Logo"
+                         class="h-16 md:h-24" />
+                </a>
             </div>
-        </div>
-        <!-- Mobile Menu -->
-        <div id="mobile-menu"
-            class="fixed top-0 right-0 h-full w-64 bg-black shadow-lg transform translate-x-full transition-transform duration-300">
-            <div class="flex justify-between items-center px-4 py-4">
-                <span class="font-semibold text-lg text-white"></span>
-                <button id="mobile-menu-close" class="p-2">
-                    <i class="fas fa-times text-white text-2xl"></i>
+            <!-- Desktop Menu -->
+            <div class="hidden md:flex items-center space-x-8">
+                <a href="index.html" class="text-white hover:text-[#F99A40]">Home</a>
+                <a href="about-us.html" class="text-white hover:text-[#F99A40]">About Us</a>
+                <a href="projects.html" class="text-white hover:text-[#F99A40]">Projects</a>
+                <a href="services.html" class="text-[#F99A40] border-b border-[#F99A40] hover:text-[#F99A40] font-medium">Services</a>
+                <!-- <a href="contact.html" class="text-white hover:text-[#F99A40]">Contact</a> -->
+                <a href="contact.html">
+                    <button class="border border-[#F99A40] text-white border-2 text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">
+                        Contact Us
+                    </button>
+                </a>
+            </div>
+            <!-- Mobile Menu Button -->
+            <div class="md:hidden flex items-center space-x-4">
+                <!-- <button
+                    class="bg-[#F99A40] text-black px-4 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">Contact
+                    Us</button> -->
+                <button id="mobile-menu-button" class="p-2">
+                    <i class="fas fa-bars text-white text-2xl"></i>
                 </button>
             </div>
-            <div class="px-8 pt-2 pb-4 space-y-3">
-                <a href="index.html" class="block text-white hover:text-[#F99A40] font-medium">Home</a>
-                <a href="about-us.html" class="block text-white hover:text-[#F99A40] font-medium">About Us</a>
-                <a href="projects.html" class="block text-white hover:text-[#F99A40] font-medium">Projects</a>
-                <a href="services.html" class="block text-white hover:text-[#F99A40] font-medium">Services</a>
-                <a href="contact.html" class="block text-white hover:text-[#F99A40] font-medium">Contact</a>
-            </div>
         </div>
-    </nav>
+    </div>
+    <!-- Mobile Menu -->
+    <div id="mobile-menu"
+         class="fixed top-0 right-0 h-full w-64 bg-black shadow-lg transform translate-x-full transition-transform duration-300">
+        <div class="flex justify-between items-center px-4 py-4">
+            <span class="font-semibold text-lg text-white"></span>
+            <button id="mobile-menu-close" class="p-2">
+                <i class="fas fa-times text-white text-2xl"></i>
+            </button>
+        </div>
+        <div class="px-8 pt-2 pb-4 space-y-3">
+            <a href="index.html" class="block text-white hover:text-[#F99A40] font-medium">Home</a>
+            <a href="about-us.html" class="block text-white hover:text-[#F99A40] font-medium">About Us</a>
+            <a href="projects.html" class="block text-white hover:text-[#F99A40] font-medium">Projects</a>
+            <a href="services.html" class="block text-white hover:text-[#F99A40] font-medium">Services</a>
+            <a href="contact.html" class="block text-white hover:text-[#F99A40] font-medium">Contact</a>
+        </div>
+    </div>
+</nav>
     
 
-    <header class="pt-20">
+    <header class="">
         <div class="relative h-[400px]"><img src="assets/service.jpg" alt="About Us Hero"
                 class="w-full h-full object-cover" />
             <div class="absolute inset-0 bg-black/50">
