--- a/contact.html
+++ b/contact.html
@@ -17,32 +17,34 @@
 
 <body class="font-[Poppins] bg-gray-50">
     <!--Navbar-->
-    <nav class="bg-black fixed w-full z-50 shadow-sm">
+    <nav id="navbar" class="bg-black sticky top-0 w-full z-50 shadow-sm transition-colors duration-300 borderborder-b border-white">
         <div class="max-w-7xl mx-auto px-8">
-            <div class="flex justify-between items-center h-20">
+            <div class="flex justify-between items-center h-auto py-2">
                 <!-- Logo -->
                 <div class="flex items-center">
                     <a href="index.html">
-                        <img src="https://ai-public.creatie.ai/gen_page/logo_placeholder.png" alt="BuildTech Logo"
-                            class="h-12" />
+                        <img src="log1.svg" alt="BuildTech Logo"
+                             class="h-16 md:h-24" />
                     </a>
                 </div>
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="text-white hover:text-[#F99A40] font-medium">Home</a>
-                    <a href="about-us.html" class="text-white hover:text-[#F99A40] font-medium">About Us</a>
-                    <a href="projects.html" class="text-white hover:text-[#F99A40] font-medium">Projects</a>
-                    <a href="services.html" class="text-white hover:text-[#F99A40] font-medium">Services</a>
-                    <a href="contact.html" class="text-white hover:text-[#F99A40] font-medium">Contact</a>
-                    <button
-                        class="bg-[#F99A40] text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">Contact
-                        Us</button>
+                    <a href="index.html" class="text-white hover:text-[#F99A40]">Home</a>
+                    <a href="about-us.html" class="text-white hover:text-[#F99A40]">About Us</a>
+                    <a href="projects.html" class="text-white hover:text-[#F99A40]">Projects</a>
+                    <a href="services.html" class="text-white hover:text-[#F99A40]">Services</a>
+                    <!-- <a href="contact.html" class="text-white hover:text-[#F99A40]">Contact</a> -->
+                    <a href="contact.html">
+                        <button class="bg-[#F99A40] border-2 text-black px-6 py-2 rounded-md text-black font-medium">
+                            Contact Us
+                        </button>
+                    </a>
                 </div>
                 <!-- Mobile Menu Button -->
                 <div class="md:hidden flex items-center space-x-4">
-                    <button
+                    <!-- <button
                         class="bg-[#F99A40] text-black px-4 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">Contact
-                        Us</button>
+                        Us</button> -->
                     <button id="mobile-menu-button" class="p-2">
                         <i class="fas fa-bars text-white text-2xl"></i>
                     </button>
@@ -51,7 +53,7 @@
         </div>
         <!-- Mobile Menu -->
         <div id="mobile-menu"
-            class="fixed top-0 right-0 h-full w-64 bg-black shadow-lg transform translate-x-full transition-transform duration-300">
+             class="fixed top-0 right-0 h-full w-64 bg-black shadow-lg transform translate-x-full transition-transform duration-300">
             <div class="flex justify-between items-center px-4 py-4">
                 <span class="font-semibold text-lg text-white"></span>
                 <button id="mobile-menu-close" class="p-2">
@@ -68,7 +70,7 @@
         </div>
     </nav>
     
-    <header class="pt-20">
+    <header class="">
         <div class="relative h-[400px]">
             <img src="assets/c-1.jpg" alt="About Us Hero" class="w-full h-full object-cover" />
             <div class="absolute inset-0 bg-black/80"> <!-- Updated to bg-black/80 for a darker overlay -->
