footer corrections done

--- a/services.html
+++ b/services.html
@@ -345,8 +345,9 @@
             </div>
         </div>
     </section>
+       <!---footer--->
 
-    <footer class="bg-gray-900 text-white py-16">
+       <footer class="bg-gray-900 text-white py-16">
         <div class="max-w-7xl mx-auto px-8">
             <div class="grid md:grid-cols-4 gap-12 mb-16">
                 <div>
@@ -368,9 +369,10 @@
                     <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/evo_design_constructions?igsh=MWJxaWFjN2hiZnl6MA%3D%3D&utm_source=qr"><i class="fab fa-youtube"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/channel/UCwirZZJa0apc1ZB8ugioTng" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div>
@@ -393,6 +395,7 @@
             </div>
         </div>
     </footer>
+
 </body>
 </html>
 <script>
