--- a/contact.html
+++ b/contact.html
@@ -164,12 +164,13 @@
             </div>
         </div>
     </section>
+       <!---footer--->
 
-    <footer class="bg-gray-900 text-white py-16">
+       <footer class="bg-gray-900 text-white py-16">
         <div class="max-w-7xl mx-auto px-8">
             <div class="grid md:grid-cols-4 gap-12 mb-16">
                 <div>
-                    <img src="logos.svg" alt="BuildTech Logo" class="h-32 mb-6" />
+                    <img src="logos.svg" alt="Evodesigns and Logo" class="h-32 mb-6" />
                     <p class="text-gray-400">Building excellence through innovation and dedication to quality
                         construction.</p>
                 </div>
@@ -187,9 +188,10 @@
                     <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/evo_design_constructions?igsh=MWJxaWFjN2hiZnl6MA%3D%3D&utm_source=qr"><i class="fab fa-youtube"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/channel/UCwirZZJa0apc1ZB8ugioTng" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div>
@@ -212,8 +214,6 @@
             </div>
         </div>
     </footer>
-
-
 </body>
 
 </html>
