--- a/index.html
+++ b/index.html
@@ -315,10 +315,10 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2">Crystal Business Center</h3>
                         <p class="text-gray-600 mb-4">Modern office complex with sustainable features</p>
-                        <div class="flex items-center text-sm text-gray-500">
+                        <!-- <div class="flex items-center text-sm text-gray-500">
                             <i class="fas fa-map-marker-alt mr-2"></i>
                             <span>New York, NY</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="bg-white rounded-lg shadow-sm overflow-hidden">
@@ -326,10 +326,10 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2">The Residences at Park Avenue</h3>
                         <p class="text-gray-600 mb-4">Luxury residential development</p>
-                        <div class="flex items-center text-sm text-gray-500">
+                        <!-- <div class="flex items-center text-sm text-gray-500">
                             <i class="fas fa-map-marker-alt mr-2"></i>
                             <span>Chicago, IL</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="bg-white rounded-lg shadow-sm overflow-hidden">
@@ -337,10 +337,10 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2">Tech Manufacturing Hub</h3>
                         <p class="text-gray-600 mb-4">State-of-the-art industrial facility</p>
-                        <div class="flex items-center text-sm text-gray-500">
+                        <!-- <div class="flex items-center text-sm text-gray-500">
                             <i class="fas fa-map-marker-alt mr-2"></i>
                             <span>Austin, TX</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -530,21 +530,21 @@
                                 <i class="fas fa-map-marker-alt text-custom mt-1"></i>
                                 <div class="ml-4">
                                     <h4 class="font-medium">Address</h4>
-                                    <p class="text-gray-600">123 Construction Ave, New York, NY 10001</p>
+                                    <p class="text-gray-600">EvoDesign, Kalliyadickal Complex, Madathil, Iritty, Kerala, 670703</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
                                 <i class="fas fa-phone text-custom mt-1"></i>
                                 <div class="ml-4">
                                     <h4 class="font-medium">Phone</h4>
-                                    <p class="text-gray-600">+1 (555) 123-4567</p>
+                                    <p class="text-gray-600">+91 9446086621, +91 9744607076</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
                                 <i class="fas fa-envelope text-custom mt-1"></i>
                                 <div class="ml-4">
                                     <h4 class="font-medium">Email</h4>
-                                    <p class="text-gray-600">info@Evodesigns and.com</p>
+                                    <p class="text-gray-600">evodesignconstruction@gmail.com</p>
                                 </div>
                             </div>
                         </div>
