--- a/projects.html
+++ b/projects.html
@@ -403,53 +403,56 @@
         </div>
     </section>
 
-    <footer class="bg-gray-900 text-white py-16">
-        <div class="max-w-7xl mx-auto px-8">
-            <div class="grid md:grid-cols-4 gap-12 mb-16">
-                <div>
-                    <img src="logos.svg" alt="Evodesigns and Logo" class="h-32 mb-6" />
-                    <p class="text-gray-400">Building excellence through innovation and dedication to quality
-                        construction.</p>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Quick Links</h4>
-                    <ul class="space-y-4">
-                        <li><a href="index.html" class="text-gray-400 hover:text-white">Home</a></li>
-                        <li><a href="about-us.html" class="text-gray-400 hover:text-white">About Us</a></li>
-                        <li><a href="services.html" class="text-gray-400 hover:text-white">Services</a></li>
-                        <li><a href="projects.html" class="text-gray-400 hover:text-white">Projects</a></li>
-                        <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
-                    <div class="flex space-x-4">
-                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-                <div>
-                    <h4 class="text-lg font-semibold mb-6">Contact Us</h4>
-                    <p class="text-gray-400 mb-4">Send us your email, and we'll get back to you.</p>
-                    <form class="flex w-full">
-                        <input type="email" placeholder="Your email"
-                            class="flex-1 px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-custom w-full"
-                            required />
-                        <button type="submit"
-                            class="bg-[#F99A40] text-gray-900 px-4 py-1 rounded-r-md hover:bg-[#F99A40]/90 font-medium text-sm">
-                            Send
-                        </button>
-                    </form>
-                </div>
+   <!---footer--->
 
+   <footer class="bg-gray-900 text-white py-16">
+    <div class="max-w-7xl mx-auto px-8">
+        <div class="grid md:grid-cols-4 gap-12 mb-16">
+            <div>
+                <img src="logos.svg" alt="Evodesigns and Logo" class="h-32 mb-6" />
+                <p class="text-gray-400">Building excellence through innovation and dedication to quality
+                    construction.</p>
             </div>
-            <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-                <p>© 2025 Evodesigns and Construction. All rights reserved.</p>
+            <div>
+                <h4 class="text-lg font-semibold mb-6">Quick Links</h4>
+                <ul class="space-y-4">
+                    <li><a href="index.html" class="text-gray-400 hover:text-white">Home</a></li>
+                    <li><a href="about-us.html" class="text-gray-400 hover:text-white">About Us</a></li>
+                    <li><a href="services.html" class="text-gray-400 hover:text-white">Services</a></li>
+                    <li><a href="projects.html" class="text-gray-400 hover:text-white">Projects</a></li>
+                    <li><a href="contact.html" class="text-gray-400 hover:text-white">Contact</a></li>
+                </ul>
             </div>
+            <div>
+                <h4 class="text-lg font-semibold mb-6">Connect With Us</h4>
+                <div class="flex space-x-4">
+                    <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/evo_design_constructions?igsh=MWJxaWFjN2hiZnl6MA%3D%3D&utm_source=qr"><i class="fab fa-youtube"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.youtube.com/channel/UCwirZZJa0apc1ZB8ugioTng" class="text-gray-400 hover:text-white text-xl"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div>
+                <h4 class="text-lg font-semibold mb-6">Contact Us</h4>
+                <p class="text-gray-400 mb-4">Send us your email, and we'll get back to you.</p>
+                <form class="flex w-full">
+                    <input type="email" placeholder="Your email"
+                        class="flex-1 px-4 py-2 rounded-l-md focus:outline-none focus:ring-2 focus:ring-custom w-full"
+                        required />
+                    <button type="submit"
+                        class="bg-[#F99A40] text-gray-900 px-4 py-1 rounded-r-md hover:bg-[#F99A40]/90 font-medium text-sm">
+                        Send
+                    </button>
+                </form>
+            </div>
+
         </div>
-    </footer>
+        <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
+            <p>© 2025 Evodesigns and Construction. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
 
 
 
