--- a/about-us.html
+++ b/about-us.html
@@ -130,31 +130,31 @@
     </section>
 
     <section class="bg-gray-100 py-20">
-        <div class="max-w-7xl mx-auto px-8 py-20 bg-gray-100">
+        <div class="max-w-4xl mx-auto px-8 py-20 bg-gray-100">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold mb-4">Leadership Team</h2>
-                <p class="text-gray-600 max-w-2xl mx-auto">Meet the experienced professionals leading Evodesigns and
-                    Construction</p>
+                <p class="text-gray-600 max-w-2xl mx-auto">
+                    Meet the experienced professionals leading Evodesigns and Construction
+                </p>
             </div>
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="bg-white p-8 rounded-lg shadow-sm text-center"><img src="assets/IMG 13.webp" alt="CEO"
-                        class="w-48 h-48 rounded-full mx-auto mb-4 object-cover" />
-                    <h3 class="text-xl font-semibold">Robert Johnson</h3>
-                    <p class="text-gray-600">CEO &amp; Founder</p>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-sm text-center"><img src="assets/IMG 14.webp" alt="COO"
-                        class="w-48 h-48 rounded-full mx-auto mb-4 object-cover" />
-                    <h3 class="text-xl font-semibold">Sarah Williams</h3>
-                    <p class="text-gray-600">Chief Operations Officer</p>
-                </div>
-                <div class="bg-white p-8 rounded-lg shadow-sm text-center"><img src="assets/IMG 15.webp" alt="Director"
-                        class="w-48 h-48 rounded-full mx-auto mb-4 object-cover" />
-                    <h3 class="text-xl font-semibold">Michael Chen</h3>
-                    <p class="text-gray-600">Technical Director</p>
+            <div class="flex justify-center">
+                <div class="bg-white p-8 rounded-lg shadow-md text-center transform transition-transform hover:scale-105">
+                    <img
+                            src="assets/ceo.png"
+                            alt="Chairman"
+                            class="w-48 h-48 rounded-full mx-auto mb-6 object-cover shadow-lg"
+                    />
+                    <h3 class="text-2xl font-semibold mb-2">Mr. Benny</h3>
+                    <p class="text-gray-500 text-lg">Chairman</p>
+                    <p class="text-gray-600 mt-4">
+                        With over 30 years of experience, Mr. Benny has been instrumental in driving the vision and success
+                        of Evodesigns and Construction.
+                    </p>
                 </div>
             </div>
         </div>
     </section>
+
 
     <section class="py-20">
         <div class="max-w-7xl mx-auto px-8 py-20">
@@ -183,29 +183,7 @@
             </div>
         </div>
     </section>
-    <!---->
-    <section class="bg-gray-900 text-white py-20">
-        <div class="max-w-7xl mx-auto px-8">
-            <div class="grid md:grid-cols-4 gap-8 text-center">
-                <div>
-                    <div class="text-4xl font-bold text-[#F99A40] mb-2">25+</div>
-                    <div class="text-gray-400">Years in Business</div>
-                </div>
-                <div>
-                    <div class="text-4xl font-bold text-[#F99A40] mb-2">500+</div>
-                    <div class="text-gray-400">Projects Completed</div>
-                </div>
-                <div>
-                    <div class="text-4xl font-bold text-[#F99A40] mb-2">150+</div>
-                    <div class="text-gray-400">Team Members</div>
-                </div>
-                <div>
-                    <div class="text-4xl font-bold text-[#F99A40] mb-2">98%</div>
-                    <div class="text-gray-400">Client Satisfaction</div>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <!--footer-->
     <footer class="bg-gray-900 text-white py-16">
         <div class="max-w-7xl mx-auto px-8">
