--- a/services.html
+++ b/services.html
@@ -167,7 +167,7 @@
             </div>
         </div>
     </section>
-    <section class="py-20">
+    <section class="bg-white">
         <div class="max-w-7xl mx-auto px-8 py-20">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold mb-4">Our Process</h2>
@@ -233,30 +233,30 @@
         </section>
 
     </section>
-    <section class="bg-gray-100 py-20">
-        <div class="max-w-7xl mx-auto px-8 py-20 bg-gray-100">
+    <section class="bg-white">
+        <div class="max-w-7xl mx-auto px-8 py-20">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold mb-4">Specialized Services</h2>
                 <p class="text-gray-600 max-w-2xl mx-auto">Additional construction services to meet your specific needs
                 </p>
             </div>
             <div class="grid md:grid-cols-4 gap-8">
-                <div class="bg-white p-6 rounded-lg shadow-sm text-center">
+                <div class="bg-white p-6 rounded-lg shadow-sm text-center border border-gray-100">
                     <div class="text-custom mb-4"><i class="fas fa-hard-hat text-3xl"></i></div>
                     <h3 class="text-lg font-semibold mb-2">Project Management</h3>
                     <p class="text-gray-600">Comprehensive project oversight and coordination</p>
                 </div>
-                <div class="bg-white p-6 rounded-lg shadow-sm text-center">
+                <div class="bg-white p-6 rounded-lg shadow-sm text-center border border-gray-100">
                     <div class="text-custom mb-4"><i class="fas fa-pencil-ruler text-3xl"></i></div>
                     <h3 class="text-lg font-semibold mb-2">Design-Build</h3>
                     <p class="text-gray-600">Integrated design and construction services</p>
                 </div>
-                <div class="bg-white p-6 rounded-lg shadow-sm text-center">
+                <div class="bg-white p-6 rounded-lg shadow-sm text-center border border-gray-100">
                     <div class="text-custom mb-4"><i class="fas fa-leaf text-3xl"></i></div>
                     <h3 class="text-lg font-semibold mb-2">Green Building</h3>
                     <p class="text-gray-600">Sustainable construction practices</p>
                 </div>
-                <div class="bg-white p-6 rounded-lg shadow-sm text-center">
+                <div class="bg-white p-6 rounded-lg shadow-sm text-center border border-gray-100">
                     <div class="text-custom mb-4"><i class="fas fa-wrench text-3xl"></i></div>
                     <h3 class="text-lg font-semibold mb-2">Maintenance</h3>
                     <p class="text-gray-600">Ongoing building maintenance services</p>
