pre final commit-1

--- a/about-us.html
+++ b/about-us.html
@@ -140,7 +140,7 @@
             <div class="flex justify-center">
                 <div class="bg-white p-8 rounded-lg shadow-md text-center transform transition-transform hover:scale-105">
                     <img
-                            src="assets/ceo.png"
+                            src="assets/ceo.webp"
                             alt="Chairman"
                             class="w-48 h-48 rounded-full mx-auto mb-6 object-cover shadow-lg"
                     />
