--- a/index.html
+++ b/index.html
@@ -548,10 +548,18 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mt-8">
-                            <img src="https://ai-public.creatie.ai/gen_page/map_placeholder_1280x720.png"
-                                alt="Office Location" class="w-full h-48 object-cover rounded-lg" />
+                        <div  class="mt-8" style="max-width: 100%; overflow: hidden; text-align: center;">
+                            <iframe 
+                                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3902.5668944512836!2d75.68844207506042!3d12.004441988229082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDAwJzE2LjAiTiA3NcKwNDEnMjcuNyJF!5e0!3m2!1sen!2sin!4v1736947809276!5m2!1sen!2sin" 
+                                width="600" 
+                                height="250" 
+                                style="border: 0;" 
+                                allowfullscreen="" 
+                                loading="lazy" 
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
                         </div>
+                
                     </div>
                 </div>
             </div>
