pre final comit

--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,12 @@
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-white hover:text-[#F99A40]">Home</a>
-                    <a href="about-us.html" class="text-[#F99A40] border-b border-[#F99A40] hover:text-[#F99A40] font-medium">About Us</a>
+                    <a href="about-us.html" class="text-white hover:text-[#F99A40]">About Us</a>
                     <a href="projects.html" class="text-white hover:text-[#F99A40]">Projects</a>
                     <a href="services.html" class="text-white hover:text-[#F99A40]">Services</a>
                     <!-- <a href="contact.html" class="text-white hover:text-[#F99A40]">Contact</a> -->
                     <a href="contact.html">
-                        <button class="border border-[#F99A40] text-white border-2 text-black px-6 py-2 rounded-md hover:bg-[#F99A40]/90 font-medium">
+                        <button class="bg-[#F99A40] text-black px-6 py-2 rounded-md font-medium">
                             Contact Us
                         </button>
                     </a>
@@ -70,7 +70,7 @@
         </div>
     </nav>
     
-    <header class="pt-20">
+    <header class="">
         <div class="relative h-[400px]">
             <img src="assets/c-1.jpg" alt="About Us Hero" class="w-full h-full object-cover" />
             <div class="absolute inset-0 bg-black/80"> <!-- Updated to bg-black/80 for a darker overlay -->
